# jframe

./: pyproject.toml
examples/: single_beam.py
jframe/: beam.py
